Correcciones y mejoras en el menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "ostream": "cpp"
     },
     "makefile.configureOnOpen": true
 }
